style show more button & fix offset value

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <div id="search-results"></div>
 
-  <div>
+  <div class="more-container">
     <button class="more-gifs hidden">Show More Gifs!</button>
   </div>
 
